--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -24,14 +24,14 @@
             android:text="Contacts"
             android:textStyle="bold"
             ></TextView>
+
         <ImageButton
             android:id="@+id/btnPlus"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_gravity="end"
             android:layout_marginRight="10dp"
-            android:background="@drawable/plus"
-            ></ImageButton>
+            android:background="@drawable/plus"></ImageButton>
     </LinearLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
