--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,8 +13,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
-      android:padding="10dp"
-      >
+      android:padding="10dp">
     <TextView
         android:layout_weight="1"
         android:layout_width="0dp"
@@ -70,12 +68,11 @@
         android:background="@drawable/custom_search"
         android:paddingEnd="12dp"/>
   </com.google.android.material.textfield.TextInputLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvChats"
-        android:layout_marginLeft="10dp"
-        android:padding="10dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        ></androidx.recyclerview.widget.RecyclerView>
-  </LinearLayout>
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/rvChats"
+      android:padding="10dp"
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      ></androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
