--- a/app/src/main/res/layout/activity_entercode.xml
+++ b/app/src/main/res/layout/activity_entercode.xml
@@ -54,8 +54,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
