--- a/app/src/main/res/layout/rvmessenger.xml
+++ b/app/src/main/res/layout/rvmessenger.xml
@@ -7,38 +7,38 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         app:cardCornerRadius="20dp"
         android:layout_width="60dp"
         android:layout_height="60dp"
         >
+
         <ImageView
             android:id="@+id/imgAvtContact"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/pic1"
-            ></ImageView>
+            android:src="@drawable/pic1" />
     </androidx.cardview.widget.CardView>
     <LinearLayout
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_width="wrap_content"
         android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/txtNameContacts"
             android:layout_width="wrap_content"
-            android:text="Vo yeu dau 1"
+            android:text="@string/vo_yeu_dau_1"
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_height="wrap_content">
         </TextView>
+
         <TextView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="13dp"
             android:id="@+id/txtStatusContact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Online"
-            android:textSize="15dp"
-            ></TextView>
+            android:text="@string/online"
+            android:textSize="10sp" />
     </LinearLayout>
 </LinearLayout>
