--- a/app/src/main/res/drawable/buble_left.xml
+++ b/app/src/main/res/drawable/buble_left.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#F0F0F0"/>
+    <solid android:color="#FFFF"/>
     <corners android:topLeftRadius="16dp"
         android:topRightRadius="16dp"
         android:bottomRightRadius="16dp"
