--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,26 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/messageContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="8dp">
 
-    <!-- Tin nhắn nhận -->
     <TextView
-        android:id="@+id/receivedMessage"
+        android:id="@+id/tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/buble_left"
         android:padding="10dp"
-        android:textColor="#000000"
-        android:visibility="gone"/>
+        android:text="Message here"
+        android:textSize="16sp" />
 
-    <!-- Tin nhắn gửi -->
     <TextView
-        android:id="@+id/sentMessage"
+        android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bubble_right"
-        android:padding="10dp"
-        android:textColor="#FFFFFF"
-        android:visibility="gone"/>
+        android:text="10:30"
+        android:textColor="#888888"
+        android:textSize="12sp" />
 </LinearLayout>
