--- a/app/src/main/res/layout/activiy_chat.xml
+++ b/app/src/main/res/layout/activiy_chat.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/chatter"
-            android:paddingHorizontal="20dp"
+            android:paddingHorizontal="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -44,7 +44,20 @@
             android:layout_height="25dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/backbutton"
+            app:tint="#1E88E5"
             android:src="@drawable/call" />
+
+        <ImageView
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:id="@+id/videoCall"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/backbutton"
+            app:tint="#1E88E5"
+            android:src="@drawable/video_call" />
+
         <ImageView
             android:layout_marginLeft="10dp"
             android:id="@+id/infooo"
@@ -53,6 +66,7 @@
             android:layout_height="25dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/backbutton"
+            app:tint="#1E88E5"
             android:src="@drawable/burger" />
     </LinearLayout>
 
