--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     android:id="@+id/main"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screen.chat.ContactsActivity">
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp">
+
         <TextView
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -22,8 +22,7 @@
             android:textSize="25dp"
             android:layout_marginLeft="20dp"
             android:text="Contacts"
-            android:textStyle="bold"
-            ></TextView>
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/btnPlus"
@@ -31,8 +30,9 @@
             android:layout_height="35dp"
             android:layout_gravity="end"
             android:layout_marginRight="10dp"
-            android:background="@drawable/plus"></ImageButton>
+            android:background="@drawable/plus" />
     </LinearLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,12 +49,12 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:paddingStart="12dp"
-            android:background="@drawable/custom_search"
-            android:paddingEnd="12dp"/>
+            android:paddingEnd="12dp"
+            android:background="@drawable/custom_search" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rwMessenger"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="wrap_content" />
 </LinearLayout>
