--- a/app/src/main/res/layout/item_more_option.xml
+++ b/app/src/main/res/layout/item_more_option.xml
@@ -1,10 +1,11 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="20dp"
-    android:paddingBottom="10dp"
-    >
+    android:paddingBottom="10dp">
 
     <ImageView
         android:id="@+id/imageViewIcon"
@@ -20,7 +21,8 @@
         android:layout_gravity="center"
         android:layout_marginStart="10dp"
         android:layout_weight="1"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:text="Option Name" />
 
     <ImageView
         android:layout_width="24dp"
