--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -47,10 +47,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_height="80dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:orientation="horizontal"
-        android:padding="10dp" />
+        android:scrollbars="horizontal"
+        tools:listitem="@layout/item_story"/>
+
 
     <!-- Search bar -->
     <com.google.android.material.textfield.TextInputLayout
