--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,14 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_chats"
-        android:icon="@drawable/chat_nav"
-        android:title="" />
-    <item
         android:id="@+id/nav_contacts"
         android:icon="@drawable/contact_nav"
-        android:title="" />
+        android:title="Contacts" />
+    <item
+        android:id="@+id/nav_chats"
+        android:icon="@drawable/chat_nav"
+        android:title="Chats" />
     <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/menu_nav"
-        android:title="" />
+        android:title="More" />
 </menu>
