--- a/app/src/main/res/layout/rvmessenger.xml
+++ b/app/src/main/res/layout/rvmessenger.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_margin="10dp"
+    android:layout_marginTop="10dp"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
