--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
@@ -9,16 +8,13 @@
     android:orientation="horizontal"
     android:padding="12dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <ImageView
         android:id="@+id/imgAvtContact"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:contentDescription="Avatar"
         android:scaleType="centerCrop"
-        android:src="@drawable/user_info"
-        app:shapeAppearanceOverlay="@style/CircleImageView"
-        app:strokeColor="#E0E0E0"
-        app:strokeWidth="0.5dp" />
+        android:src="@drawable/user_info" />
 
     <LinearLayout
         android:layout_width="0dp"
